# ipython_playground

./: README.md  environment.yml  pyproject.toml  requirements.txt
fourier_transform/: exponential_form_fourier_series.ipynb  fourier_series_exp_form.ipynb  fourier_series_trig_form.ipynb  sin_cos_form_fourier_series.ipynb  stft.ipynb  trigonometric_fourier_series.ipynb
