[tool.poetry]
name = "ipython_playground"
version = "0.1.0"
description = ""
authors = ["Michael Brunner <michael.brunn3r@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ipywidgets = "^7.6.4"
plotly = "^5.3.1"
jupyterlab = "^3.1.11"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
librosa = "^0.8.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
